# triron-inference-server-tutorial

./: .gitignore  README.md  conda_env.yml  requirements.txt
simple_example/: client.py  pyproject.toml
simple_example/model_repository/detection/: config.pbtxt
